--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ header{
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 0 5%;
 }
 .header__navigation-content{
     display: flex;   
@@ -117,9 +116,13 @@ h1{
     justify-content: space-between;
 }
 hr{
-    width: calc(100% - 40px);
-    margin: 0 auto; 
-    display: block;
+    width: 100%;
+    /* margin: auto 5%; 
+    display: block; */
+}
+.container{
+    max-width: 1300px;
+    margin: auto;
 }
 .wrapper__detail--text-content{
     width: 40%;
@@ -156,8 +159,17 @@ textarea{
 footer{
    display: flex;
    justify-content: space-between;
-   width: 85%;
-   margin: auto;
+   width: 100%;
+  
+}
+.footer{
+    margin-top: 10px;
+}
+.footer p{
+    margin-top: 10px;
+}
+svg{
+    margin-left: 5px;
 }
 @media screen and (max-width:700px){
     nav{
